--- a/Sonority/index.html
+++ b/Sonority/index.html
@@ -13,6 +13,7 @@
 	<script src="../libraries/p5.dom.js"></script>
 	<script src="../libraries/p5.sound.js"></script>
 	<script src="segment.js"></script>
+  <script src="word.js"></script>
 	<script src="sketch.js"></script>
 
 	<style>
